{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 227,
  "lineage": "ad4fd964-228f-600e-e282-6074075d6cf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_nodeport_sg_30080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30080,
            "id": "sgrule-3700323822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b11ee58620f9e6c0",
            "security_group_rule_id": "sgr-0e74923052c46e0f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_nodeport_sg_30443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30443,
            "id": "sgrule-3754410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b11ee58620f9e6c0",
            "security_group_rule_id": "sgr-0e53a91ee97f8ee9e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_nodeport_sg_30080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30080,
            "id": "sgrule-1793550516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-03e9312fab1c91e9e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_nodeport_sg_30443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30443,
            "id": "sgrule-3058717936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-041457eef6cc358cf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:security-group/sg-02d7ef5c10e40bc4a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02d7ef5c10e40bc4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http ingress traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "preprod-alb-sg",
            "name_prefix": "",
            "owner_id": "009453609091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "preprod",
              "ManagedBy": "terraform",
              "Name": "preprod-alb-sg"
            },
            "tags_all": {
              "Environment": "preprod",
              "ManagedBy": "terraform",
              "Name": "preprod-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg_rule_http",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http ingress traffic",
            "from_port": 80,
            "id": "sgrule-1658056283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d7ef5c10e40bc4a",
            "security_group_rule_id": "sgr-0200f702cb80d6f16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb_sg.aws_security_group.sg",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:vpc/vpc-04d0ac671d977ddb6",
            "cidr_block": "10.36.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01d222eaaca47b507",
                "cidr_block": "10.36.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-6ffe8a07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d0ac671d977ddb6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e58bc6ab33de32a",
            "owner_id": "009453609091",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:security-group/sg-0f40df3b19077dd75",
            "description": "Allow remote SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f40df3b19077dd75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.36.0.0/16",
                  "3.144.85.96/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "preprod-remote-access2023010318195986630000000b",
            "name_prefix": "preprod-remote-access",
            "owner_id": "009453609091",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "tags_all": {
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.data.http.workstation-external-ip",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:security-group/sg-0028580d186fcce62",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40b98a6ceffb2f7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40b98a6ceffb2f7"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "To node 1025-65535",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40b98a6ceffb2f7"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0028580d186fcce62",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.36.0.0/16"
                ],
                "description": "allow alb traffic",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "10.36.0.0/16"
                ],
                "description": "allow nlb traffic",
                "from_port": 30443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40b98a6ceffb2f7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "preprod-cluster-2023010318200078180000000c",
            "name_prefix": "preprod-cluster-",
            "owner_id": "009453609091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "preprod-cluster",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "tags_all": {
              "Name": "preprod-cluster",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:security-group/sg-0d40b98a6ceffb2f7",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0028580d186fcce62"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0d40b98a6ceffb2f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0028580d186fcce62"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0028580d186fcce62"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "preprod-node-2023010318200078190000000d",
            "name_prefix": "preprod-node-",
            "owner_id": "009453609091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "preprod-node",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations",
              "kubernetes.io/cluster/preprod": "owned"
            },
            "tags_all": {
              "Name": "preprod-node",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations",
              "kubernetes.io/cluster/preprod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-814586738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-0b5bd8ea571861b65",
            "self": false,
            "source_security_group_id": "sg-0d40b98a6ceffb2f7",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-1435966420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-0d9ba5e833d9d1498",
            "self": false,
            "source_security_group_id": "sg-0d40b98a6ceffb2f7",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3512586261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-02c48baa9418138fa",
            "self": false,
            "source_security_group_id": "sg-0d40b98a6ceffb2f7",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.36.0.0/16"
            ],
            "description": "allow alb traffic",
            "from_port": 30080,
            "id": "sgrule-4055844534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-0b5e0a3c4f553f1ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nlb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.36.0.0/16"
            ],
            "description": "allow nlb traffic",
            "from_port": 30443,
            "id": "sgrule-2698656934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-01bb077624648cb61",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-315179192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0028580d186fcce62",
            "security_group_rule_id": "sgr-0d5aacbab467b9c66",
            "self": false,
            "source_security_group_id": "sg-0d40b98a6ceffb2f7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3130487286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-0cf53a0e9200e5792",
            "self": false,
            "source_security_group_id": "sg-0028580d186fcce62",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1074760204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-0b3b04f35b1fcbd0a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2681321234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-0599dc536ed712af5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3780088351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-075052bcd48fc9fa9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4095134133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-026e9cf33eedf4729",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2054245331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-05c7090e82f0f57c4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1947710635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-0cf53a0e9200e5792",
            "self": false,
            "source_security_group_id": "sg-0028580d186fcce62",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2377769737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-08af8c3ba7922e9c2",
            "self": false,
            "source_security_group_id": "sg-0028580d186fcce62",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-386764025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-026e9cf33eedf4729",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3008507670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d40b98a6ceffb2f7",
            "security_group_rule_id": "sgr-0b60559df521f3d5c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.mng-default",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:security-group/sg-0a2d4a067080a2e5c",
            "description": "Security group for preprod default eks managed node group",
            "egress": [],
            "id": "sg-0a2d4a067080a2e5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.36.0.0/16"
                ],
                "description": "allow alb traffic",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "10.36.0.0/16"
                ],
                "description": "allow nlb traffic",
                "from_port": 30443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30443
              }
            ],
            "name": "default-node-group-sg-2023010318200092390000000e",
            "name_prefix": "default-node-group-sg-",
            "owner_id": "009453609091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-node-group-sg",
              "Separate": "eks-managed-node-group",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "tags_all": {
              "Name": "default-node-group-sg",
              "Separate": "eks-managed-node-group",
              "environment": "prod",
              "github_org": "Commonplace-Digital-Ltd",
              "github_repo": "foundations"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.mng-default",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.36.0.0/16"
            ],
            "description": "allow alb traffic",
            "from_port": 30080,
            "id": "sgrule-185572544",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a2d4a067080a2e5c",
            "security_group_rule_id": "sgr-08e43a309ffc358ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.36.0.0/16"
            ],
            "description": "allow nlb traffic",
            "from_port": 30443,
            "id": "sgrule-1516955344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a2d4a067080a2e5c",
            "security_group_rule_id": "sgr-0208cc9a5741d711f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffe97f274b939681",
            "association_id": "eipassoc-0ad0d93544ac709df",
            "domain": "vpc",
            "id": "eipalloc-0ffe97f274b939681",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-015ee13855ed188eb",
            "private_dns": "ip-10-36-130-68.eu-west-2.compute.internal",
            "private_ip": "10.36.130.68",
            "public_dns": "ec2-35-179-70-96.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.179.70.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00db7c55755d483e4",
            "association_id": "eipassoc-0719715a3921814c3",
            "domain": "vpc",
            "id": "eipalloc-00db7c55755d483e4",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-092b9ce0749f34a23",
            "private_dns": "ip-10-36-153-170.eu-west-2.compute.internal",
            "private_ip": "10.36.153.170",
            "public_dns": "ec2-18-170-183-25.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.183.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e3557488b26fca2",
            "association_id": "eipassoc-03d34b8e119166878",
            "domain": "vpc",
            "id": "eipalloc-01e3557488b26fca2",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0cc7835a45bbd9e5c",
            "private_dns": "ip-10-36-170-43.eu-west-2.compute.internal",
            "private_ip": "10.36.170.43",
            "public_dns": "ec2-18-168-104-8.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.104.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:internet-gateway/igw-04a577d97b9bd65a7",
            "id": "igw-04a577d97b9bd65a7",
            "owner_id": "009453609091",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffe97f274b939681",
            "connectivity_type": "public",
            "id": "nat-0ad0e45a4c2d8e3db",
            "network_interface_id": "eni-015ee13855ed188eb",
            "private_ip": "10.36.130.68",
            "public_ip": "35.179.70.96",
            "subnet_id": "subnet-094112be5bc0dc084",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00db7c55755d483e4",
            "connectivity_type": "public",
            "id": "nat-0876a39e5ea3853f0",
            "network_interface_id": "eni-092b9ce0749f34a23",
            "private_ip": "10.36.153.170",
            "public_ip": "18.170.183.25",
            "subnet_id": "subnet-0b3cc0b84c12cd5ce",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e3557488b26fca2",
            "connectivity_type": "public",
            "id": "nat-0e64abc6b90b3cfeb",
            "network_interface_id": "eni-0cc7835a45bbd9e5c",
            "private_ip": "10.36.170.43",
            "public_ip": "18.168.104.8",
            "subnet_id": "subnet-04278497c94514d8b",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0721cb3c8643da9ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad0e45a4c2d8e3db",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0721cb3c8643da9ad",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f58363aadf717c571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0876a39e5ea3853f0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f58363aadf717c57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05670b20a6fcd83511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e64abc6b90b3cfeb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05670b20a6fcd8351",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a577d97b9bd65a7",
            "id": "r-rtb-0b0b143c86570dc2e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0b143c86570dc2e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:route-table/rtb-0f2b1f786b7d91118",
            "id": "rtb-0f2b1f786b7d91118",
            "owner_id": "009453609091",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "preprod-eks-vpc-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-eks-vpc-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:route-table/rtb-0721cb3c8643da9ad",
            "id": "rtb-0721cb3c8643da9ad",
            "owner_id": "009453609091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad0e45a4c2d8e3db",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:route-table/rtb-0f58363aadf717c57",
            "id": "rtb-0f58363aadf717c57",
            "owner_id": "009453609091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0876a39e5ea3853f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:route-table/rtb-05670b20a6fcd8351",
            "id": "rtb-05670b20a6fcd8351",
            "owner_id": "009453609091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e64abc6b90b3cfeb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:route-table/rtb-0b0b143c86570dc2e",
            "id": "rtb-0b0b143c86570dc2e",
            "owner_id": "009453609091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a577d97b9bd65a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07864aad0bb2cae17",
            "route_table_id": "rtb-0f2b1f786b7d91118",
            "subnet_id": "subnet-0d476288319dab344"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f81f26029019154",
            "route_table_id": "rtb-0f2b1f786b7d91118",
            "subnet_id": "subnet-06f6077669774f9c2"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1de6209c35ab2b",
            "route_table_id": "rtb-0f2b1f786b7d91118",
            "subnet_id": "subnet-06370bdcb0b692a97"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08439c56dbeb042ed",
            "route_table_id": "rtb-0721cb3c8643da9ad",
            "subnet_id": "subnet-008f44bb3ae014759"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09446dc86c1f3ceb1",
            "route_table_id": "rtb-0f58363aadf717c57",
            "subnet_id": "subnet-0ca3220d63611c671"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d073a8c741b70e5e",
            "route_table_id": "rtb-05670b20a6fcd8351",
            "subnet_id": "subnet-0d886d41143ceb03f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030d1d7c7da98253d",
            "route_table_id": "rtb-0b0b143c86570dc2e",
            "subnet_id": "subnet-094112be5bc0dc084"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb381fa3b0746fca",
            "route_table_id": "rtb-0b0b143c86570dc2e",
            "subnet_id": "subnet-0b3cc0b84c12cd5ce"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08749ffbb964ac645",
            "route_table_id": "rtb-0b0b143c86570dc2e",
            "subnet_id": "subnet-04278497c94514d8b"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-0d476288319dab344",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.36.192.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d476288319dab344",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-06f6077669774f9c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.36.200.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f6077669774f9c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-06370bdcb0b692a97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.36.208.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06370bdcb0b692a97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-eks-db",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-008f44bb3ae014759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.36.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008f44bb3ae014759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-0ca3220d63611c671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.36.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca3220d63611c671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-0d886d41143ceb03f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.36.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d886d41143ceb03f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-private",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-094112be5bc0dc084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.36.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094112be5bc0dc084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-0b3cc0b84c12cd5ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.36.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3cc0b84c12cd5ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:subnet/subnet-04278497c94514d8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.36.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04278497c94514d8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009453609091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "preprod-eks-public",
              "kubernetes.io/cluster/preprod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009453609091:vpc/vpc-04d0ac671d977ddb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.36.0.0/16",
            "default_network_acl_id": "acl-0451ed1987fedbf5a",
            "default_route_table_id": "rtb-01e58bc6ab33de32a",
            "default_security_group_id": "sg-079f594086a9a52bd",
            "dhcp_options_id": "dopt-6ffe8a07",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d0ac671d977ddb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e58bc6ab33de32a",
            "owner_id": "009453609091",
            "tags": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "kubernetes.io/cluster/preprod": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:loadbalancer/net/preprod-nlb/4669df49bef9a282",
            "arn_suffix": "net/preprod-nlb/4669df49bef9a282",
            "dns_name": "preprod-nlb-4669df49bef9a282.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:loadbalancer/net/preprod-nlb/4669df49bef9a282",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "preprod-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04278497c94514d8b"
              },
              {
                "subnet_id": "subnet-094112be5bc0dc084"
              },
              {
                "subnet_id": "subnet-0b3cc0b84c12cd5ce"
              }
            ],
            "subnets": [
              "subnet-04278497c94514d8b",
              "subnet-094112be5bc0dc084",
              "subnet-0b3cc0b84c12cd5ce"
            ],
            "tags": {
              "Environment": "preprod"
            },
            "tags_all": {
              "Environment": "preprod"
            },
            "vpc_id": "vpc-04d0ac671d977ddb6",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "dependencies": [
            "module.eks.aws_key_pair.deployer",
            "module.eks.aws_kms_key.ebs",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_security_group.remote_access",
            "module.eks.data.aws_ami.bastion",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.ebs",
            "module.eks.data.aws_subnet_ids.private",
            "module.eks.data.aws_subnet_ids.public",
            "module.eks.data.aws_vpc.eks",
            "module.eks.data.http.workstation-external-ip",
            "module.eks.data.terraform_remote_state.eks",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this_with_initial_lifecycle_hook",
            "module.eks.module.bastion-asg.aws_launch_configuration.this",
            "module.eks.module.bastion-asg.null_resource.tags_as_list_of_maps",
            "module.eks.module.bastion-asg.random_pet.asg_name",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_default_tags.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.mng-default.aws_eks_node_group.this",
            "module.eks.module.mng-default.aws_iam_role.this",
            "module.eks.module.mng-default.aws_iam_role_policy_attachment.this",
            "module.eks.module.mng-default.aws_launch_template.this",
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.mng-default.aws_security_group_rule.this",
            "module.eks.module.mng-default.data.aws_caller_identity.current",
            "module.eks.module.mng-default.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.mng-default.data.aws_partition.current",
            "module.eks.module.mng-default.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.vpc.aws_db_subnet_group.database",
            "module.eks.module.vpc.aws_default_network_acl.this",
            "module.eks.module.vpc.aws_default_vpc.this",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_network_acl.database",
            "module.eks.module.vpc.aws_network_acl.elasticache",
            "module.eks.module.vpc.aws_network_acl.intra",
            "module.eks.module.vpc.aws_network_acl.private",
            "module.eks.module.vpc.aws_network_acl.public",
            "module.eks.module.vpc.aws_network_acl.redshift",
            "module.eks.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eks.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eks.module.vpc.aws_route.database_internet_gateway",
            "module.eks.module.vpc.aws_route.database_nat_gateway",
            "module.eks.module.vpc.aws_route.private_nat_gateway",
            "module.eks.module.vpc.aws_route.public_internet_gateway",
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.elasticache",
            "module.eks.module.vpc.aws_route_table.intra",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_route_table.redshift",
            "module.eks.module.vpc.aws_route_table_association.database",
            "module.eks.module.vpc.aws_route_table_association.elasticache",
            "module.eks.module.vpc.aws_route_table_association.intra",
            "module.eks.module.vpc.aws_route_table_association.private",
            "module.eks.module.vpc.aws_route_table_association.public",
            "module.eks.module.vpc.aws_route_table_association.redshift",
            "module.eks.module.vpc.aws_route_table_association.redshift_public",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_subnet.elasticache",
            "module.eks.module.vpc.aws_subnet.intra",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_subnet.redshift",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eks.module.vpc.aws_vpc_endpoint.apigw",
            "module.eks.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eks.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eks.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eks.module.vpc.aws_vpc_endpoint.events",
            "module.eks.module.vpc.aws_vpc_endpoint.kms",
            "module.eks.module.vpc.aws_vpc_endpoint.logs",
            "module.eks.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eks.module.vpc.aws_vpc_endpoint.s3",
            "module.eks.module.vpc.aws_vpc_endpoint.sns",
            "module.eks.module.vpc.aws_vpc_endpoint.sqs",
            "module.eks.module.vpc.aws_vpc_endpoint.ssm",
            "module.eks.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.module.vpc.aws_vpn_gateway.this",
            "module.eks.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.vpc_cni",
            "module.eks.module.vpc_cni_irsa.aws_iam_role.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_caller_identity.current",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cert_manager",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.ebs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.efs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_dns",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_secrets",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.this",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.velero",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_listeners",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:listener/net/preprod-nlb/4669df49bef9a282/757fe21e93efc2e0",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:targetgroup/preprod-nlb-tg/4a96d960bd907d0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:listener/net/preprod-nlb/4669df49bef9a282/757fe21e93efc2e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:loadbalancer/net/preprod-nlb/4669df49bef9a282",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.eks.aws_key_pair.deployer",
            "module.eks.aws_kms_key.ebs",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_security_group.remote_access",
            "module.eks.data.aws_ami.bastion",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.ebs",
            "module.eks.data.aws_subnet_ids.private",
            "module.eks.data.aws_subnet_ids.public",
            "module.eks.data.aws_vpc.eks",
            "module.eks.data.http.workstation-external-ip",
            "module.eks.data.terraform_remote_state.eks",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this_with_initial_lifecycle_hook",
            "module.eks.module.bastion-asg.aws_launch_configuration.this",
            "module.eks.module.bastion-asg.null_resource.tags_as_list_of_maps",
            "module.eks.module.bastion-asg.random_pet.asg_name",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_default_tags.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.mng-default.aws_eks_node_group.this",
            "module.eks.module.mng-default.aws_iam_role.this",
            "module.eks.module.mng-default.aws_iam_role_policy_attachment.this",
            "module.eks.module.mng-default.aws_launch_template.this",
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.mng-default.aws_security_group_rule.this",
            "module.eks.module.mng-default.data.aws_caller_identity.current",
            "module.eks.module.mng-default.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.mng-default.data.aws_partition.current",
            "module.eks.module.mng-default.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.vpc.aws_db_subnet_group.database",
            "module.eks.module.vpc.aws_default_network_acl.this",
            "module.eks.module.vpc.aws_default_vpc.this",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_network_acl.database",
            "module.eks.module.vpc.aws_network_acl.elasticache",
            "module.eks.module.vpc.aws_network_acl.intra",
            "module.eks.module.vpc.aws_network_acl.private",
            "module.eks.module.vpc.aws_network_acl.public",
            "module.eks.module.vpc.aws_network_acl.redshift",
            "module.eks.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eks.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eks.module.vpc.aws_route.database_internet_gateway",
            "module.eks.module.vpc.aws_route.database_nat_gateway",
            "module.eks.module.vpc.aws_route.private_nat_gateway",
            "module.eks.module.vpc.aws_route.public_internet_gateway",
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.elasticache",
            "module.eks.module.vpc.aws_route_table.intra",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_route_table.redshift",
            "module.eks.module.vpc.aws_route_table_association.database",
            "module.eks.module.vpc.aws_route_table_association.elasticache",
            "module.eks.module.vpc.aws_route_table_association.intra",
            "module.eks.module.vpc.aws_route_table_association.private",
            "module.eks.module.vpc.aws_route_table_association.public",
            "module.eks.module.vpc.aws_route_table_association.redshift",
            "module.eks.module.vpc.aws_route_table_association.redshift_public",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_subnet.elasticache",
            "module.eks.module.vpc.aws_subnet.intra",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_subnet.redshift",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eks.module.vpc.aws_vpc_endpoint.apigw",
            "module.eks.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eks.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eks.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eks.module.vpc.aws_vpc_endpoint.events",
            "module.eks.module.vpc.aws_vpc_endpoint.kms",
            "module.eks.module.vpc.aws_vpc_endpoint.logs",
            "module.eks.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eks.module.vpc.aws_vpc_endpoint.s3",
            "module.eks.module.vpc.aws_vpc_endpoint.sns",
            "module.eks.module.vpc.aws_vpc_endpoint.sqs",
            "module.eks.module.vpc.aws_vpc_endpoint.ssm",
            "module.eks.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.module.vpc.aws_vpn_gateway.this",
            "module.eks.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.vpc_cni",
            "module.eks.module.vpc_cni_irsa.aws_iam_role.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_caller_identity.current",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cert_manager",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.ebs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.efs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_dns",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_secrets",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.this",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.velero",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_partition.current",
            "module.nlb.aws_lb.lb",
            "module.nlb_listeners.aws_lb_target_group.http"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:listener/net/preprod-nlb/4669df49bef9a282/8fb89b7702640612",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:targetgroup/preprod-nlb-tg/4a96d960bd907d0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:listener/net/preprod-nlb/4669df49bef9a282/8fb89b7702640612",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:loadbalancer/net/preprod-nlb/4669df49bef9a282",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.eks.aws_key_pair.deployer",
            "module.eks.aws_kms_key.ebs",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_security_group.remote_access",
            "module.eks.data.aws_ami.bastion",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.ebs",
            "module.eks.data.aws_subnet_ids.private",
            "module.eks.data.aws_subnet_ids.public",
            "module.eks.data.aws_vpc.eks",
            "module.eks.data.http.workstation-external-ip",
            "module.eks.data.terraform_remote_state.eks",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this_with_initial_lifecycle_hook",
            "module.eks.module.bastion-asg.aws_launch_configuration.this",
            "module.eks.module.bastion-asg.null_resource.tags_as_list_of_maps",
            "module.eks.module.bastion-asg.random_pet.asg_name",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_default_tags.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.mng-default.aws_eks_node_group.this",
            "module.eks.module.mng-default.aws_iam_role.this",
            "module.eks.module.mng-default.aws_iam_role_policy_attachment.this",
            "module.eks.module.mng-default.aws_launch_template.this",
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.mng-default.aws_security_group_rule.this",
            "module.eks.module.mng-default.data.aws_caller_identity.current",
            "module.eks.module.mng-default.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.mng-default.data.aws_partition.current",
            "module.eks.module.mng-default.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.vpc.aws_db_subnet_group.database",
            "module.eks.module.vpc.aws_default_network_acl.this",
            "module.eks.module.vpc.aws_default_vpc.this",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_network_acl.database",
            "module.eks.module.vpc.aws_network_acl.elasticache",
            "module.eks.module.vpc.aws_network_acl.intra",
            "module.eks.module.vpc.aws_network_acl.private",
            "module.eks.module.vpc.aws_network_acl.public",
            "module.eks.module.vpc.aws_network_acl.redshift",
            "module.eks.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eks.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eks.module.vpc.aws_route.database_internet_gateway",
            "module.eks.module.vpc.aws_route.database_nat_gateway",
            "module.eks.module.vpc.aws_route.private_nat_gateway",
            "module.eks.module.vpc.aws_route.public_internet_gateway",
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.elasticache",
            "module.eks.module.vpc.aws_route_table.intra",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_route_table.redshift",
            "module.eks.module.vpc.aws_route_table_association.database",
            "module.eks.module.vpc.aws_route_table_association.elasticache",
            "module.eks.module.vpc.aws_route_table_association.intra",
            "module.eks.module.vpc.aws_route_table_association.private",
            "module.eks.module.vpc.aws_route_table_association.public",
            "module.eks.module.vpc.aws_route_table_association.redshift",
            "module.eks.module.vpc.aws_route_table_association.redshift_public",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_subnet.elasticache",
            "module.eks.module.vpc.aws_subnet.intra",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_subnet.redshift",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eks.module.vpc.aws_vpc_endpoint.apigw",
            "module.eks.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eks.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eks.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eks.module.vpc.aws_vpc_endpoint.events",
            "module.eks.module.vpc.aws_vpc_endpoint.kms",
            "module.eks.module.vpc.aws_vpc_endpoint.logs",
            "module.eks.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eks.module.vpc.aws_vpc_endpoint.s3",
            "module.eks.module.vpc.aws_vpc_endpoint.sns",
            "module.eks.module.vpc.aws_vpc_endpoint.sqs",
            "module.eks.module.vpc.aws_vpc_endpoint.ssm",
            "module.eks.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.module.vpc.aws_vpn_gateway.this",
            "module.eks.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.vpc_cni",
            "module.eks.module.vpc_cni_irsa.aws_iam_role.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_caller_identity.current",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cert_manager",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.ebs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.efs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_dns",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_secrets",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.this",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.velero",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_partition.current",
            "module.nlb.aws_lb.lb",
            "module.nlb_listeners.aws_lb_target_group.http"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_listeners",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:targetgroup/preprod-nlb-tg/4a96d960bd907d0e",
            "arn_suffix": "targetgroup/preprod-nlb-tg/4a96d960bd907d0e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "30080",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:009453609091:targetgroup/preprod-nlb-tg/4a96d960bd907d0e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "preprod-nlb-tg",
            "port": 30080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d0ac671d977ddb6"
          },
          "dependencies": [
            "module.eks.aws_key_pair.deployer",
            "module.eks.aws_kms_key.ebs",
            "module.eks.aws_kms_key.eks",
            "module.eks.aws_security_group.remote_access",
            "module.eks.data.aws_ami.bastion",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.ebs",
            "module.eks.data.aws_subnet_ids.private",
            "module.eks.data.aws_subnet_ids.public",
            "module.eks.data.aws_vpc.eks",
            "module.eks.data.http.workstation-external-ip",
            "module.eks.data.terraform_remote_state.eks",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this",
            "module.eks.module.bastion-asg.aws_autoscaling_group.this_with_initial_lifecycle_hook",
            "module.eks.module.bastion-asg.aws_launch_configuration.this",
            "module.eks.module.bastion-asg.null_resource.tags_as_list_of_maps",
            "module.eks.module.bastion-asg.random_pet.asg_name",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_default_tags.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.mng-default.aws_eks_node_group.this",
            "module.eks.module.mng-default.aws_iam_role.this",
            "module.eks.module.mng-default.aws_iam_role_policy_attachment.this",
            "module.eks.module.mng-default.aws_launch_template.this",
            "module.eks.module.mng-default.aws_security_group.this",
            "module.eks.module.mng-default.aws_security_group_rule.this",
            "module.eks.module.mng-default.data.aws_caller_identity.current",
            "module.eks.module.mng-default.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.mng-default.data.aws_partition.current",
            "module.eks.module.mng-default.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.vpc.aws_db_subnet_group.database",
            "module.eks.module.vpc.aws_default_network_acl.this",
            "module.eks.module.vpc.aws_default_vpc.this",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_network_acl.database",
            "module.eks.module.vpc.aws_network_acl.elasticache",
            "module.eks.module.vpc.aws_network_acl.intra",
            "module.eks.module.vpc.aws_network_acl.private",
            "module.eks.module.vpc.aws_network_acl.public",
            "module.eks.module.vpc.aws_network_acl.redshift",
            "module.eks.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eks.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eks.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eks.module.vpc.aws_route.database_internet_gateway",
            "module.eks.module.vpc.aws_route.database_nat_gateway",
            "module.eks.module.vpc.aws_route.private_nat_gateway",
            "module.eks.module.vpc.aws_route.public_internet_gateway",
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.elasticache",
            "module.eks.module.vpc.aws_route_table.intra",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_route_table.redshift",
            "module.eks.module.vpc.aws_route_table_association.database",
            "module.eks.module.vpc.aws_route_table_association.elasticache",
            "module.eks.module.vpc.aws_route_table_association.intra",
            "module.eks.module.vpc.aws_route_table_association.private",
            "module.eks.module.vpc.aws_route_table_association.public",
            "module.eks.module.vpc.aws_route_table_association.redshift",
            "module.eks.module.vpc.aws_route_table_association.redshift_public",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_subnet.elasticache",
            "module.eks.module.vpc.aws_subnet.intra",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_subnet.redshift",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options.this",
            "module.eks.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eks.module.vpc.aws_vpc_endpoint.apigw",
            "module.eks.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eks.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2",
            "module.eks.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eks.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eks.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eks.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eks.module.vpc.aws_vpc_endpoint.events",
            "module.eks.module.vpc.aws_vpc_endpoint.kms",
            "module.eks.module.vpc.aws_vpc_endpoint.logs",
            "module.eks.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eks.module.vpc.aws_vpc_endpoint.s3",
            "module.eks.module.vpc.aws_vpc_endpoint.sns",
            "module.eks.module.vpc.aws_vpc_endpoint.sqs",
            "module.eks.module.vpc.aws_vpc_endpoint.ssm",
            "module.eks.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eks.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.module.vpc.aws_vpn_gateway.this",
            "module.eks.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eks.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eks.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_policy.vpc_cni",
            "module.eks.module.vpc_cni_irsa.aws_iam_role.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cert_manager",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.ebs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.efs_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_dns",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.external_secrets",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.this",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.velero",
            "module.eks.module.vpc_cni_irsa.aws_iam_role_policy_attachment.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_caller_identity.current",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cert_manager",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.ebs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.efs_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_dns",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.external_secrets",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.karpenter_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.node_termination_handler",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.this",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.velero",
            "module.eks.module.vpc_cni_irsa.data.aws_iam_policy_document.vpc_cni",
            "module.eks.module.vpc_cni_irsa.data.aws_partition.current",
            "module.nlb.aws_lb.lb"
          ]
        }
      ]
    }
  ]
}